--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,8 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="images/icon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
     <title>Les petit plats</title>
   </head>
   <body>
@@ -12,6 +13,10 @@
         <img src="images/logo.png" class="logo"  alt="Les petit plats" />
     </header>
     <main>
+        <form>
+            <input type="text" name="pseudo" value="Rechercher une recette" />
+            <i class="fas fa-search"></i>
+        </form>
     </main>
     <script src="index.js" ></script>
   </body>
