--- a/Index.html
+++ b/Index.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <link href="index.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="images/icon.png">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
-    <title>Les petit plats</title>
-  </head>
-  <body>
-    <header>
-        <img src="images/logo.png" class="logo"  alt="Les petit plats" />
-    </header>
-    <main>
-        <form>
-            <input type="text" name="pseudo" value="Rechercher une recette" />
-            <i class="fas fa-search"></i>
-        </form>
-    </main>
-    <script src="index.js" ></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="images/icon.png">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link href="index.css" rel="stylesheet" type="text/css" />
+  <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
+  <title>Les petit plats</title>
+</head>
+
+<body>
+  <header>
+    <img src="images/logo.png" class="logo" alt="Les petit plats" />
+  </header>
+  <main>
+    <form>
+      <input type="text" name="pseudo" placeholder="Rechercher une recette" />
+      <i class="fas fa-search"></i>
+    </form>
+    <div id="filters">
+      <div class="dropdown-parent">
+        <div class="btn btn-primary dropdown-toggle blue"  id="form">        
+          <form >
+          <input type="text" name="pseudo" placeholder="Rechercher un ingredient" /><span class="fas fa-chevron-up"></span>
+        </form></div>
+        <button class="btn btn-primary dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Ingredients<i class="fas fa-chevron-down"></i></button>
+        <ul class="dropdown-menu blue" >
+
+        </ul>
+      </div>
+      <ul class="dropdown-parent">
+        <button class="btn btn-primary dropdown-toggle green"  data-toggle="dropdown"  id="form">        
+          <form >
+          <input type="text" name="pseudo" placeholder="Rechercher un Appareil" /><span class="fas fa-chevron-up"></span>
+        </form></button>
+        <button class="btn btn-primary dropdown-toggle " type="button" id="menu2" data-toggle="dropdown">Appareils<i class="fas fa-chevron-down"></i></button>
+        <ul class="dropdown-menu green" >
+
+        </ul>
+      </ul>
+      <ul class="dropdown-parent">
+        <button class="btn btn-primary dropdown-toggle red"  data-toggle="dropdown"  id="form">        
+          <form >
+          <input type="text" name="pseudo" placeholder="Rechercher un ustensil" /><span class="fas fa-chevron-up"></span>
+        </form></button>
+        <button class="btn btn-primary dropdown-toggle" type="button" id="menu3" data-toggle="dropdown">Ustensils<i class="fas fa-chevron-down"></i></button>
+        <ul class="dropdown-menu red" >
+
+        </ul>
+      </ul>
+    </div>
+    <div id="recipes">
+
+    </div>
+  </main>
+</body>
+
 </html>
+<script src="data/recipes.js"></script>
+<script src="script/index.js"></script>
