--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
   </header>
   <main>
     <form>
-      <input type="text" name="pseudo" placeholder="Rechercher une recette" />
+      <input type="text" id="myInput" name="pseudo" placeholder="Rechercher une recette" />
       <i class="fas fa-search"></i>
     </form>
     <div id="filters">
