--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,7 @@
       <input type="text" id="myInput" name="pseudo" placeholder="Rechercher une recette" />
       <i class="fas fa-search"></i>
     </form>
+    <div id="tags"></div>
     <div id="filters">
       <div class="dropdown-parent">
         <div class="btn btn-primary dropdown-toggle blue"  id="form">        
