--- a/Index.html
+++ b/Index.html
@@ -26,32 +26,41 @@
     <div id="tags"></div>
     <div id="filters">
       <div class="dropdown-parent">
-        <div class="btn btn-primary dropdown-toggle blue"  id="form">        
-          <form >
-          <input type="text" name="pseudo" placeholder="Rechercher un ingredient" /><span class="fas fa-chevron-up"></span>
-        </form></div>
-        <button class="btn btn-primary dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Ingredients<i class="fas fa-chevron-down"></i></button>
-        <ul class="dropdown-menu blue" >
+        <div class="btn btn-primary dropdown-toggle blue" id="form">
+          <form>
+            <input id="barreb" class="barre" type="text" name="pseudo" placeholder="Rechercher un ingredient" /><span
+              class="fas fa-chevron-up"></span>
+          </form>
+        </div>
+        <button class="btn btn-primary dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Ingredients<i
+            class="fas fa-chevron-down"></i></button>
+        <ul class="dropdown-menu blue">
 
         </ul>
       </div>
       <ul class="dropdown-parent">
-        <button class="btn btn-primary dropdown-toggle green"  data-toggle="dropdown"  id="form">        
-          <form >
-          <input type="text" name="pseudo" placeholder="Rechercher un Appareil" /><span class="fas fa-chevron-up"></span>
-        </form></button>
-        <button class="btn btn-primary dropdown-toggle " type="button" id="menu2" data-toggle="dropdown">Appareils<i class="fas fa-chevron-down"></i></button>
-        <ul class="dropdown-menu green" >
+        <button class="btn btn-primary dropdown-toggle green" data-toggle="dropdown" id="form">
+          <form>
+            <input type="text" id="barreg" class="barre" name="pseudo" placeholder="Rechercher un Appareil" /><span
+              class="fas fa-chevron-up"></span>
+          </form>
+        </button>
+        <button class="btn btn-primary dropdown-toggle " type="button" id="menu2" data-toggle="dropdown">Appareils<i
+            class="fas fa-chevron-down"></i></button>
+        <ul class="dropdown-menu green">
 
         </ul>
       </ul>
       <ul class="dropdown-parent">
-        <button class="btn btn-primary dropdown-toggle red"  data-toggle="dropdown"  id="form">        
-          <form >
-          <input type="text" name="pseudo" placeholder="Rechercher un ustensil" /><span class="fas fa-chevron-up"></span>
-        </form></button>
-        <button class="btn btn-primary dropdown-toggle" type="button" id="menu3" data-toggle="dropdown">Ustensils<i class="fas fa-chevron-down"></i></button>
-        <ul class="dropdown-menu red" >
+        <button class="btn btn-primary dropdown-toggle red" data-toggle="dropdown" id="form">
+          <form>
+            <input type="text" id="barrer" class="barre" name="pseudo" placeholder="Rechercher un ustensil" /><span
+              class="fas fa-chevron-up"></span>
+          </form>
+        </button>
+        <button class="btn btn-primary dropdown-toggle" type="button" id="menu3" data-toggle="dropdown">Ustensils<i
+            class="fas fa-chevron-down"></i></button>
+        <ul class="dropdown-menu red">
 
         </ul>
       </ul>
