--- a/Index.html
+++ b/Index.html
@@ -19,11 +19,14 @@
     <img src="images/logo.png" class="logo" alt="Les petit plats" />
   </header>
   <main>
+    <!-- search bar -->
     <form>
       <input type="text" id="myInput" name="pseudo" placeholder="Rechercher une recette" />
       <i class="fas fa-search"></i>
     </form>
+    <!-- là où les tags apparaissent après avoir été cliqué -->
     <div id="tags"></div>
+    <!-- ingredients, appareils, ustensils -->
     <div id="filters">
       <div class="dropdown-parent">
         <div class="btn btn-primary dropdown-toggle blue form">
@@ -65,6 +68,7 @@
         </ul>
       </div>
     </div>
+    <!-- recettes -->
     <div id="recipes">
 
     </div>
