--- a/Index.html
+++ b/Index.html
@@ -70,7 +70,8 @@
     </div>
     <!-- recettes -->
     <div id="recipes">
-
+    <div id="error">Aucune recette ne correspond à votre critère… vous pouvez
+      chercher « tarte aux pommes », « poisson », etc.</div>      
     </div>
   </main>
   <script src="data/recipes.js"></script>
